new file:   assets/main/explicit/style/style.css 	new file:   assets/main/style/footer.css 	new file:   assets/main/style/header.css 	new file:   assets/main/styles/main.css 	modified:   index.html 	new file:   legal/copyright/index.html 	new file:   legal/privacy/index.html 	new file:   legal/terms/index.html 	new file:   support/index.html

--- a/support/index.html
+++ b/support/index.html
@@ -3,11 +3,11 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>milan-loiky | Home</title>
-  <link rel="stylesheet" href="assets/main/styles/main.css">
-  <link rel="stylesheet" href="assets/main/style/header.css">
-  <link rel="stylesheet" href="assets/main/style/footer.css">
-  <link rel="stylesheet" href="assets/main/explicit/style/style.css">
+  <title>milan-loiky | Support</title>
+  <link rel="stylesheet" href="../assets/main/styles/main.css">
+  <link rel="stylesheet" href="../assets/main/style/header.css">
+  <link rel="stylesheet" href="../assets/main/style/footer.css">
+  <link rel="stylesheet" href="../assets/support/explicit/style/style.css">
 </head>
 <body>
     <div class="container">
@@ -29,7 +29,7 @@
         <a href="/legal/copyright/">Copyright Notice</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
         <a href="/support/">Get Support via Discord</a>
         <br><br><hr><br>
-        <p>Version 1.3.0</p>
+        <p>You can view the Version <a href="../">here</a></p>
         <p>© 2025 milan_loiky. All rights reserved.</p>
         </p>
       </div>
