modified:   assets/main/styles/main.css 	new file:   assets/projects/templates/explicit/style.css 	new file:   assets/projects/templates/images/simple_login_+_register_form.png 	new file:   assets/support/explicit/style/style.css 	modified:   index.html 	new file:   projects/templates/index.html 	new file:   projects/templates/simple_login_+_register_form/index.html 	modified:   support/index.html 	new file:   z.html

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <br><hr><br>
         <a href="projects/templates/">View my templates</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
         <a href="https://creativemarket.com/milan_loiky">View my store</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-        <a href="https://github.com/milan-loiky/milan_loiky">View my GitHub</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+        <a href="https://github.com/milan-loiky">View my GitHub</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
         <a href="support/">Get Support via Discord</a>
         <br><br>
       </div>
@@ -24,12 +24,12 @@
         <br><br><br>
       </div>
       <div class="footer">
-        <a href="/legal/privacy/">Privacy Policy</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-        <a href="/legal/terms/">Terms of Service</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-        <a href="/legal/copyright/">Copyright Notice</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-        <a href="/support/">Get Support via Discord</a>
+        <a href="legal/privacy/">Privacy Policy</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+        <a href="legal/terms/">Terms of Service</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+        <a href="legal/copyright/">Copyright Notice</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+        <a href="support/">Get Support via Discord</a>
         <br><br><hr><br>
-        <p>Version 1.3.0</p>
+        <p>Version 1.4.0</p>
         <p>© 2025 milan_loiky. All rights reserved.</p>
         </p>
       </div>
