--- a/z.html
+++ b/z.html
@@ -3,11 +3,11 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>milan-loiky | Support</title>
-  <link rel="stylesheet" href="../../assets/main/styles/main.css">
-  <link rel="stylesheet" href="../../assets/main/style/header.css">
-  <link rel="stylesheet" href="../../assets/main/style/footer.css">
-  <link rel="stylesheet" href="../../assets/support/explicit/style/style.css">
+  <title>milan-loiky | z.html</title>
+  <link rel="stylesheet" href="../assets/main/styles/main.css">
+  <link rel="stylesheet" href="../assets/main/style/header.css">
+  <link rel="stylesheet" href="../assets/main/style/footer.css">
+  <link rel="stylesheet" href="../assets/projects/templates/explicit/style.css">
 </head>
 <body>
     <div class="container">
@@ -17,17 +17,11 @@
         <a href="../projects/templates/">View my templates</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
         <a href="https://creativemarket.com/milan_loiky">View my store</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
         <a href="https://github.com/milan-loiky">View my GitHub</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-        <a href="..support/">Get Support via Discord</a>
+        <a href="../support/">Get Support via Discord</a>
         <br><br>
       </div>
       <div class="content">
-        <br>
-        <h2>Get Support via Discord!</h2>
-        <p>If you need assistance, feel free to reach out on our Discord server!</p>
-        <p>By joining the Discord server, I agree that my personal user data, which is visible via my Discord profile, may be used in certain contexts such as private messages or notes. No data will be alienated.</p>
-        <br>
-        <button class="join-button" onclick="window.location.href='https://discord.gg/cheMJnffmc'">Join Discord Server to get support</button>
-        <br><br>
+        
       </div>
       <div class="footer">
         <a href="../legal/privacy/">Privacy Policy</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
